--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -54,8 +54,8 @@
             <a href="#" class="navbar-brand">Японский админ</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="active"><a href="/admin/teams">Команды</a></li>
-            <li><a href="/admin/news">Новости</a></li>
+            <li><a href="/admin">Новости</a></li>
+            <li><a href="/admin/country">Страны</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Логин</a></li>
