--- a/src/main/resources/templates/newsList.html
+++ b/src/main/resources/templates/newsList.html
@@ -8,7 +8,7 @@
         <div class="col-md-1"></div>
         <div class="col-md-10 col-wrapper">
             <img id="logo" src="/images/jlogo.png"/>
-            <div th:replace="main::mainmenu"></div>
+            <div th:replace="main::mainmenu"/>
             <div class="row">
                 <div class="col-md-8">
                     <div th:each="newsItem : ${news}" class="panel panel-default">
