--- a/src/main/resources/templates/admin/country.html
+++ b/src/main/resources/templates/admin/country.html
@@ -34,7 +34,8 @@
                 </tbody>
             </table>
             <button id="add-country" type="button" class="btn btn-success">Добавить</button>
-            <button id="update-countries" type="button" class="btn btn-success">Загрузить</button>
+            <button th:if="${not progress}" id="update-countries" type="button" class="btn btn-success"><span class="glyphicon glyphicon-download-alt"></span>  Загрузить</button>
+            <button th:if="${progress}" class="btn btn-warning" disabled="disabled"><span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span> Загружаем...</button>
         </div>
     </div>
 </div>
@@ -67,6 +68,8 @@
                     window.location.href='/admin/country';
                 }
             });
+            $("#update-countries").remove();
+            $("#add-country").after(' <button class="btn btn-warning" disabled="disabled"><span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span> Загружаем...</button>');
         });
     });
 </script>
