--- a/src/main/resources/templates/admin/team.html
+++ b/src/main/resources/templates/admin/team.html
@@ -31,6 +31,7 @@
         </div>
     </div>
 </div>
+<footer th:replace="main::footer"></footer>
 <script src="/js/jquery-2.1.4.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/jquery.tabledit.js"></script>
