--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -15,6 +15,30 @@
         body {
             background: url(/images/girl.jpg) no-repeat top right #d6d8d7;
             background-attachment: fixed;
+            margin-bottom: 60px;
+        }
+
+        html {
+            position: relative;
+            min-height: 100%;
+        }
+
+        .footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 60px;
+        }
+
+        .text-muted {
+            margin: 20px 0;
+        }
+
+        .nav-emblem {
+            width: 25px;
+            height: 25px;
+            float: left;
+            margin: 0 0 0 0;
         }
     </style>
 </head>
@@ -25,24 +49,20 @@
         <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
             <span class="sr-only">Toggle navigation</span>
         </button>
-        <a href="#" class="navbar-brand">Японская лига FA13</a>
+        <a href="/" class="navbar-brand">Японская лига FA13</a>
     </div>
     <div id="navbarCollapse" class="collapse navbar-collapse">
         <div class="container">
             <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-6">
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
                     <ul class="nav navbar-nav">
-                        <li><a href="#">Akita</a></li>
-                        <li><a href="#">Akita</a></li>
-                        <li><a href="#">Akita</a></li>
-                        <li><a href="#">Akita</a></li>
-                        <li><a href="#">Akita</a></li>
-                        <li><a href="#">Akita</a></li>
-                        <li><a href="#">Akita</a></li>
+                        <li th:each="jTeam : ${japanTeams}">
+                            <a href="#"><img class="nav-emblem" src="" th:attr="src=${jTeam.emblem}"/></a>
+                        </li>
                     </ul>
                 </div>
-                <div class="col-md-3"></div>
+                <div class="col-md-2"></div>
             </div>
         </div>
     </div>
@@ -51,7 +71,7 @@
      role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a href="#" class="navbar-brand">Японский админ</a>
+            <a href="/admin" class="navbar-brand">Японский админ</a>
         </div>
         <ul class="nav navbar-nav">
             <li><a href="/admin">Новости</a></li>
@@ -92,8 +112,8 @@
             <div class="row">
                 <div class="col-md-8">
                     <div th:each="newsItem : ${news}" class="panel panel-default">
-                        <div class="panel-heading" th:text="${newsItem.title}">Новости</div>
-                        <div class="panel-body" th:text="${newsItem.text}">Привет! Это новость для вас!</div>
+                        <div class="panel-heading" th:shortText="${newsItem.title}">Новости</div>
+                        <div class="panel-body" th:shortText="${newsItem.shortText}">Привет! Это новость для вас!</div>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -107,6 +127,15 @@
         <div class="col-md-1"></div>
     </div>
 </div>
+<footer th:fragment="footer" class="footer navbar-inverse">
+    <div class="container">
+        <div class="row">
+            <div id="footer-content">
+                <p class="text-muted">Developed by <a href="mailto:alterloki@yandex.ru">@alterloki</a></p>
+            </div>
+        </div>
+    </div>
+</footer>
 <script src="/js/jquery-2.1.4.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/jquery.tabledit.min.js"></script>
