--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -95,8 +95,9 @@
                         <li th:attr="class=((${pageType} eq 'news') ? 'active' : '')"><a href="/">Новости</a></li>
                         <li th:attr="class=((${pageType} eq 'transfer') ? 'active' : '')"><a
                                 href="/transfer">Трансфер</a></li>
-                        <li><a href="#">Галлерея</a></li>
-                        <li><a href="#">Messages</a></li>
+                        <li><a href="/komandy">Видео матчей</a></li>
+                        <li><a href="/gallery">Фото</a></li>
+                        <li><a href="/poleznoe">Интересно</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Логин</a></li>
