--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -76,8 +76,8 @@
             <a href="/admin" class="navbar-brand">Японский админ</a>
         </div>
         <ul class="nav navbar-nav">
-            <li><a href="/admin">Новости</a></li>
-            <li><a href="/admin/country">Страны</a></li>
+            <li><a href="/new/admin">Новости</a></li>
+            <li><a href="/new/admin/country">Страны</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Логин</a></li>
