--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -24,7 +24,7 @@
                     <td th:text="${user.login}"></td>
                     <td th:text="${user.name}"></td>
                     <td th:text="${user.fa_id}"></td>
-                    <td><a href="admin/user.html" th:href="@{/admin/country/{country_id}/team(country_id=${country.id})}">Редактировать</a></td>
+                    <td><a href="/new/admin/user.html" th:href="@{/new/admin/country/{country_id}/team(country_id=${country.id})}">Редактировать</a></td>
                 </tr>
                 </tbody>
             </table>
@@ -40,7 +40,7 @@
     $(document).ready(function () {
         $('#add-user').click(function () {
             $.ajax({
-                url: '/admin/users',
+                url: '/new/admin/users',
                 type: 'PUT',
                 success: function(result) {
                     window.location.href='/admin/users';
